--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^7.3.8",
     "@tanstack/react-query": "^5.90.21",
     "@tanstack/react-query-devtools": "^5.91.3",
+    "axios": "^1.13.5",
     "express": "^5.2.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
